refactor: update assets and document module
