# backend/src/docs/swagger.yaml
@@ -220,18 +220,18 @@ paths:
   /api/asset/search:
     get:
       summary: Search assets with multiple filters
-      description: Retrieve assets using dynamic filters such as primary system, status, organization, class, or asset code.
+      description: Retrieve assets using dynamic filters such as zone, status, organization, or asset code.
       tags:
         - Asset
       security:
         - bearerAuth: []
       parameters:
         - in: query
-          name: primarySystem
+          name: zone
           schema:
             type: string
-          description: Filter by primary system (OBJ_PRIMARYSYSTEM)
-          example: ALPHARD / CAMRY
+          description: Filter by zone
+          example: PANTRY
 
         - in: query
           name: status
@@ -244,12 +244,6 @@ paths:
           schema:
             type: string
           description: Organization code
-
-        - in: query
-          name: classDesc
-          schema:
-            type: string
-          description: Class description
 
         - in: query
           name: assetCode
@@ -273,7 +267,7 @@ paths:
                         organizationDescription: "Toyota Tsusho"
                         status: "I"
                         class: "Furniture & fittings"
-                        primarySystem: "CAMRY"
+                        zone: "CAMRY"
                         commissionDate: "07-NOV-2025 00:00"
                         document: ""
 
@@ -288,8 +282,8 @@ paths:
 
   /api/asset/zone/{zone}:
     get:
-      summary: Get assets by zone (primary system)
-      description: Retrieve assets filtered by zone (OBJ_PRIMARYSYSTEM)
+      summary: Get assets by zone
+      description: Retrieve assets filtered by zone
       tags:
         - Asset
       security:
@@ -300,8 +294,7 @@ paths:
           required: true
           schema:
             type: string
-          example: CAMRY
-          description: Primary system / zone
+          example: PANTRY
 
       responses:
         "200":
@@ -315,7 +308,7 @@ paths:
                     data:
                       - assetCode: "FF25228/HQ-1"
                         description: "Foldable table"
-                        primarySystem: "CAMRY"
+                        zone: "PANTRY"
 
         "400":
           description: Bad request
